# FastApi-application-1

Backend/: .gitignore  pyproject.toml
Backend/application_1/: database.py  main.py  models.py
